--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href='static/css/bootstrap.min.css' rel='stylesheet'>
   <link href='static/css/main.css' rel='stylesheet'>
 
-  <script src='static/js/jquery-1.10.2.min.js'></script>
+  <script src='static/js/jquery.min.js'></script>
   <script src='static/jsmol/JSmol.min.nojq.js'></script>
 </head>
 
