--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 <option value='tWW'>trans Watson/Watson</option>
                 <option value='cWS'>cis Watson/Sugar</option>
                 <option value='tWS'>trans Watson/Sugar</option>
-                <option value='cWH'>cis Watson/Hoogesteen</option>
-                <option value='tWH'>trans Watson/Hoogesteen</option>
+                <option value='cWH'>cis Watson/Hoogsteen</option>
+                <option value='tWH'>trans Watson/Hoogsteen</option>
                 <option value='cSS'>cis Sugar/Sugar</option>
                 <option value='tSS'>trans Sugar/Sugar</option>
-                <option value='cSH'>cis Sugar/Hoogesteen</option>
-                <option value='tSH'>trans Sugar/Hoogesteen</option>
-                <option value='cHH'>cis Hoogesteen/Hoogesteen</option>
-                <option value='tHH'>trans Hoogesteen/Hoogesteen</option>
+                <option value='cSH'>cis Sugar/Hoogsteen</option>
+                <option value='tSH'>trans Sugar/Hoogsteen</option>
+                <option value='cHH'>cis Hoogsteen/Hoogsteen</option>
+                <option value='tHH'>trans Hoogsteen/Hoogsteen</option>
               </select>
             </div>
           </div>
