--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Leontis/Westhof Basepair Catalog</title>
   <link href='static/css/chosen.css' rel='stylesheet'>
+  <link href='static/css/tipsy.css' rel='stylesheet'>
   <link href='static/css/bootstrap.min.css' rel='stylesheet'>
   <link href='static/css/main.css' rel='stylesheet'>
 
@@ -137,6 +138,7 @@
 <script src='static/js/bootstrap.min.js'></script>
 <script src='static/js/heatmap.js'></script>
 <script src='static/js/chosen.jquery.min.js'></script>
+<script src='static/js/tipsy.jquery.js'></script>
 <script src='static/js/plugins.js'></script>
 <script src='static/js/jquery.jmolTools.js'></script>
 <script src='static/js/app.js'></script>
