Fix family in family selector
Dr. Zirbel has data for (c|t)HS not SH as I expected so I changed the family
names to reflect this.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                   <option value='tWH'>trans Watson/Hoogsteen</option>
                   <option value='cSS'>cis Sugar/Sugar</option>
                   <option value='tSS'>trans Sugar/Sugar</option>
-                  <option value='cSH'>cis Sugar/Hoogsteen</option>
-                  <option value='tSH'>trans Sugar/Hoogsteen</option>
+                  <option value='cHS'>cis Hoogsteen/Sugar</option>
+                  <option value='tHS'>trans Hoogsteen/Sugar</option>
                   <option value='cHH'>cis Hoogsteen/Hoogsteen</option>
                   <option value='tHH'>trans Hoogsteen/Hoogsteen</option>
                 </select>
