Refactor heat maps of different summary properties
This cleans up the code for it some what. However, there are still problems with
it, for example we should never show the count or resolution as -1 in a tool
tip. That's never good. In addition, we seem to have some problems with keeping
the count the same between the table and the heatmap.

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                   Summarize Using
                 </label>
                 <div class='col-md-6'>
-                  <select id='coloring-selector' class='chosen-select' disabled>
+                  <select id='coloring-selector' class='chosen-select'>
                     <option value="exemplar" selected>Exemplars</option>
                     <option value="count">Count</option>
                     <option value="resolution">Resolution</option>
-                    <option value="distance">C1'-C1' Distance</option>
+                    <!-- <option value="distance">C1'-C1' Distance</option> -->
                   </select>
                 </div>
               </div>
