Use new jsmol tools

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <script src='static/js/chosen.jquery.min.js'></script>
 <script src='static/js/tipsy.jquery.js'></script>
 <script src='static/js/plugins.js'></script>
-<script src='static/js/jquery.jmolTools.js'></script>
+<script src='static/js/jsMolTools.js'></script>
 <script src='static/js/app.js'></script>
 
 </body>
