Add toggle numbers button code
We can now toggle displaying the numbers in the jsmol window. It is flawed but
usable for now. The toggle state should presist when we display new structures.
It does not yet.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
               <div class='form-group'>
                 <button id='jt-clear' type='button' class='btn btn-default'>Clear Selected</button>
-                <button type='button' class='btn btn-default'>Show Numbers</button>
+                <button id='jt-numbers' type='button' class='btn btn-default'>Show Numbers</button>
               </div>
           </form>
         </div>
