Change title and fix structure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div id='content' class='container'>
   <div class='page-header'>
-    <h1>RNA basepair catalog, organized by Leontis-Westhof Annotations</h1>
+    <h1>RNA Basepairs Organized in Geometric Families</h1>
   </div>
 
   <div id='about-container' class='row'>
@@ -46,11 +46,11 @@
           </div>
         </div>
       </form>
+    </div>
 
-      <div class='col-md-7'>
-        <p>Some help text</p>
-        <button type='button' class='btn btn-info disabled'>More Help</button>
-      </div>
+    <div class='col-md-7'>
+      <p>Some help text</p>
+      <button type='button' class='btn btn-info disabled'>More Help</button>
     </div>
   </div>
 
