Use icons to show warning in the table
I'm using font awesome fonts symbols to show a warning when we have or do not
have the 3D information for each exemplar. I think this is a bit cleaner than
using a colored row.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href='static/css/chosen.css' rel='stylesheet'>
 <link href='static/css/tipsy.css' rel='stylesheet'>
 <link href='static/css/bootstrap.min.css' rel='stylesheet'>
+<link href='static/css/font-awesome.min.css' rel='stylesheet'>
 <link href='static/css/main.css' rel='stylesheet'>
 
 <script src='static/js/jquery.min.js'></script>
@@ -98,7 +99,6 @@
       </div>
 
       <div id='heat-map' class='col-md-8'></div>
-
 
     </div>
 
