Shorten NT numbers
The button was too long. Shortening the name makes it fit in the space better. I
think it is still clear like this.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
           <div class='form-group'>
             <button id='jt-numbers' type='button' class='btn btn-default'>
-              Show Nucleotide Numbers
+              Nucleotide Numbers
             </button>
           </div>
         </form>
