--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
   <div id='about-container' class='row'>
 
-    <div class='col-md-5'>
+    <div class='col-md-4'>
       <form role='form' id='select-family' class='form-horizontal' action=''>
 
         <div class="form-group">
           <label for='family-selector' class='col-md-4 control-label'>
-            Select a Family
+            Family
           </label>
           <div class='col-md-6'>
             <select id='family-selector' class='chosen-select'>
@@ -104,23 +104,23 @@
 
   </div>
 
-<hr>
+  <hr>
 
-<div id='data-container'>
-  <div id='table-container' class='col-md-9'></div>
+  <div id='data-container'>
+    <div id='table-container' class='col-md-9'></div>
 
-  <div id='download-container' class='col-md-3'>
-    <form role='form' action=''>
-      <legend>Download Links</legend>
-      <div class="form-group">
-        <button type='button' class="disabled btn btn-success">Download Selected</button>
-      </div>
-      <div class="form-group">
-        <button type='button' class="disabled btn btn-success">Download All</button>
-      </div>
-    </form>
+    <div id='download-container' class='col-md-3'>
+      <form role='form' action=''>
+        <legend>Download Links</legend>
+        <div class="form-group">
+          <button type='button' class="disabled btn btn-success">Download Selected</button>
+        </div>
+        <div class="form-group">
+          <button type='button' class="disabled btn btn-success">Download All</button>
+        </div>
+      </form>
+    </div>
   </div>
-</div>
 </div>
 
 <script src='static/js/handlebars.js'></script>
@@ -131,6 +131,7 @@
 <script src='static/js/tipsy.jquery.js'></script>
 <script src='static/js/plugins.js'></script>
 <script src='static/js/jsMolTools.js'></script>
+<script src='static/js/utils.js'></script>
 <script src='static/js/app.js'></script>
 
 </body>
