Add abbreviations to dropdown
I also played with the layout a bit so the dropdown is bigger.

--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
       <form role='form' id='select-family' class='form-horizontal' action=''>
 
         <div class="form-group">
-          <label for='family-selector' class='col-md-4 control-label'>
+          <label for='family-selector' class='col-md-3 control-label'>
             Family
           </label>
-          <div class='col-md-6'>
+          <div class='col-md-9'>
             <select id='family-selector' class='chosen-select'>
-              <option value='cWW' selected>cis Watson-Crick/Watson-Crick</option>
-              <option value='tWW'>trans Watson-Crick/Watson-Crick</option>
-              <option value='cWS'>cis Watson-Crick/Sugar</option>
-              <option value='tWS'>trans Watson-Crick/Sugar</option>
-              <option value='cWH'>cis Watson-Crick/Hoogsteen</option>
-              <option value='tWH'>trans Watson-Crick/Hoogsteen</option>
-              <option value='cSS'>cis Sugar/Sugar</option>
-              <option value='tSS'>trans Sugar/Sugar</option>
-              <option value='cHS'>cis Hoogsteen/Sugar</option>
-              <option value='tHS'>trans Hoogsteen/Sugar</option>
-              <option value='cHH'>cis Hoogsteen/Hoogsteen</option>
-              <option value='tHH'>trans Hoogsteen/Hoogsteen</option>
+              <option value='cWW' selected>cis Watson-Crick/Watson-Crick (cWW)</option>
+              <option value='tWW'>trans Watson-Crick/Watson-Crick (tWW)</option>
+              <option value='cWS'>cis Watson-Crick/Sugar (cWS)</option>
+              <option value='tWS'>trans Watson-Crick/Sugar (tWS)</option>
+              <option value='cWH'>cis Watson-Crick/Hoogsteen (cWH)</option>
+              <option value='tWH'>trans Watson-Crick/Hoogsteen (tWH)</option>
+              <option value='cSS'>cis Sugar/Sugar (cSS)</option>
+              <option value='tSS'>trans Sugar/Sugar (tSS)</option>
+              <option value='cHS'>cis Hoogsteen/Sugar (cHS)</option>
+              <option value='tHS'>trans Hoogsteen/Sugar (tHS)</option>
+              <option value='cHH'>cis Hoogsteen/Hoogsteen (cHH)</option>
+              <option value='tHH'>trans Hoogsteen/Hoogsteen (tHH)</option>
             </select>
           </div>
         </div>
