--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>RNA basepair catalog Basepair Catalog</title>
+<title>RNA Basepair Catalog</title>
 <link href='static/css/chosen.css' rel='stylesheet'>
 <link href='static/css/tipsy.css' rel='stylesheet'>
 <link href='static/css/bootstrap.min.css' rel='stylesheet'>
@@ -17,7 +17,7 @@
 
 <div id='content' class='container'>
   <div class='page-header'>
-    <h1>RNA Basepairs Organized in Geometric Families</h1>
+    <h1>RNA Basepairs Catalog</h1>
   </div>
 
   <div id='about-container' class='row'>
