--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class='col-md-7'>
-      <p>Some help text</p>
+      <p>View examples of each type of basepair observed or predicted to occur in RNA 3D structures from this page. Basepairs are organized in geometric families according to the interacting base edges and the relative orientations of the glycosidic bonds attaching the bases to the sugars. H-bonds can form between Watson-Crick (W), Hoogsteen (H) or Sugar (S) Edges in all combinations. Relative orientations are cis (c) or trans (t).  Select basepair families with the dropdown menu to view base combinations that form in each family. The interactive heat map shows geometric similarities of basepairs in each family and can be used to select instances to superpose in the 3D viewer window.</p>
     </div>
   </div>
 
