Allow search boxes to search by cWW
We can search using the short name as well as the long name. This makes
searching a lot easier.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <script src='static/js/d3.js'></script>
 <script src='static/js/bootstrap.min.js'></script>
 <script src='static/js/heatmap.js'></script>
-<script src='static/js/chosen.jquery.min.js'></script>
+<script src='static/js/chosen.jquery.js'></script>
 <script src='static/js/tipsy.jquery.js'></script>
 <script src='static/js/plugins.js'></script>
 <script src='static/js/jsMolTools.js'></script>
