--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
   <div id='data-container'>
     <div id='table-container' class='col-md-9'></div>
 
-    <div id='download-container' class='col-md-3'>
-      <form role='form' action=''>
-        <legend>Download Links</legend>
-        <div class="form-group">
-          <button type='button' class="disabled btn btn-success">Download Selected</button>
-        </div>
-        <div class="form-group">
-          <button type='button' class="disabled btn btn-success">Download All</button>
-        </div>
-      </form>
-    </div>
+    <!-- <div id='download-container' class='col-md-3'> -->
+    <!--   <form role='form' action=''> -->
+    <!--     <legend>Download Links</legend> -->
+    <!--     <div class="form-group"> -->
+    <!--       <button type='button' class="disabled btn btn-success">Download Selected</button> -->
+    <!--     </div> -->
+    <!--     <div class="form-group"> -->
+    <!--       <button type='button' class="disabled btn btn-success">Download All</button> -->
+    <!--     </div> -->
+    <!--   </form> -->
+    <!-- </div> -->
   </div>
 </div>
 
