Add help button
The button links to a google doc of detailed help information. Hopefully this is
what others wanted for help.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       instances to superpose in the 3D viewer window.
       </p>
 
+      <a type='button' class='btn btn-success' href='https://docs.google.com/document/d/1yKMEqltobcz5PHv4r_-kbjPNv8fws1XTCweLTsneRAc/edit#heading=h.48rib1szy2ds'>
+        More Help
+      </a>
+
     </div>
   </div>
 
