Shorten help text as requested

--- a/index.html
+++ b/index.html
@@ -26,15 +26,11 @@
       <p>
       View examples of each type of basepair observed or predicted to occur
       in RNA 3D structures from this page. Basepairs are organized in geometric
-      families using the Leontis-Westhof classification. This groups basepairs 
-      according to the interacting base edges and the relative
-      orientations of the glycosidic bonds attaching the bases to the sugars.
-      H-bonds can form between Watson-Crick (W), Hoogsteen (H) or Sugar (S)
-      edges in all combinations. Relative orientations are cis (c) or trans (t).
-      Select basepair families with the dropdown menu to view base combinations
-      that form in each family. The interactive heat map shows geometric
-      similarities of basepairs in each family and can be used to select
-      instances to superpose in the 3D viewer window.
+      families using the Leontis-Westhof classification. Select basepair
+      families with the dropdown menu to view base combinations that form in
+      each family. The interactive heat map shows geometric similarities of
+      basepairs in each family and can be used to select instances to superpose
+      in the 3D viewer window.
       </p>
 
       <a type='button' class='btn btn-success' href='https://docs.google.com/document/d/1yKMEqltobcz5PHv4r_-kbjPNv8fws1XTCweLTsneRAc/edit#heading=h.48rib1szy2ds'>
