--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@
             </div>
           </div>
 
-        <div class="form-group">
-          <label for='coloring-selector' class='col-md-4 control-label'>
-            Summarize Using
-          </label>
-          <div class='col-md-7'>
-            <select id='coloring-selector' class='chosen-select'>
-              <option value="exemplar" selected>Exemplars</option>
-              <option value="count">Count</option>
-              <option value="resolution">Resolution</option>
-              <!-- <option value="distance">C1'-C1' Distance</option> -->
-            </select>
-          </div>
-        </div>
-      </form>
+        <!-- <div class="form-group"> -->
+        <!--   <label for='coloring-selector' class='col-md-4 control-label'> -->
+        <!--     Summarize Using -->
+        <!--   </label> -->
+        <!--   <div class='col-md-7'> -->
+        <!--     <select id='coloring-selector' class='chosen-select'> -->
+        <!--       <option value="exemplar" selected>Exemplars</option> -->
+        <!--       <option value="count">Count</option> -->
+        <!--       <option value="resolution">Resolution</option> -->
+                   <!-- <option value="distance">C1'-C1' Distance</option> -->
+        <!--     </select> -->
+        <!--   </div> -->
+        <!-- </div> -->
+      <!-- </form> -->
 
       <div id="summary-table"></div>
 
