Change link for help text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       in the 3D viewer window.
       </p>
 
-      <a type='button' class='btn btn-success' href='https://docs.google.com/document/d/1yKMEqltobcz5PHv4r_-kbjPNv8fws1XTCweLTsneRAc/edit#heading=h.48rib1szy2ds'>
+      <a type='button' class='btn btn-success' href='https://docs.google.com/document/d/1TxZmg2LETlKlKk5u9Cf0MwlKGIf8qVKossx5c5_cPE0'>
         More Help
       </a>
 
