Add hover text to table headers
This is an outline of the text to show when hovering over headers in the table.
It was unclear as to what each column meant and this is intended to make that
clearer.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,41 @@
   </div>
 </div>
 
+<div class="header-content-container">
+  <div class='header-content' hidden data-header-name='sequence'>
+    <p>
+      The sequence of the exemplar.
+    </p>
+  </div>
+
+  <div class='header-content' hidden data-header-name='idi'>
+    <p>
+      The name of the group this exemplar belongs to. Each member of the group
+      is isosteric to all other members of the group.
+    </p>
+  </div>
+
+  <div class="header-content" hidden data-header-name='count'>
+    <p>
+      The number of instances of this base pair with this sequence in the
+      Non-redundant set.
+    </p>
+  </div>
+
+  <div class="header-content" hidden data-header-name='pdb'>
+    <p>
+      The PDB file the exemplar pair comes from.
+    </p>
+  </div>
+
+  <div class="header-content" hidden data-header-name='resolution'>
+    <p>
+      The resolution of the PDB file this exemplar comes from.
+    </p>
+  </div>
+
+</div>
+
 <script src='static/js/handlebars.js'></script>
 <script src='static/js/d3.js'></script>
 <script src='static/js/bootstrap.min.js'></script>
