Add family number
We should show family number somehow. This is not the best way but it will start
the discussion I hope.

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
             </label>
             <div class='col-md-7'>
               <select id='family-selector' class='chosen-select'>
-                <option value='cWW' selected>cis Watson-Crick/Watson-Crick (cWW)</option>
-                <option value='tWW'>trans Watson-Crick/Watson-Crick (tWW)</option>
-                <option value='cWH'>cis Watson-Crick/Hoogsteen (cWH)</option>
-                <option value='tWH'>trans Watson-Crick/Hoogsteen (tWH)</option>
-                <option value='cWS'>cis Watson-Crick/Sugar (cWS)</option>
-                <option value='tWS'>trans Watson-Crick/Sugar (tWS)</option>
-                <option value='cHH'>cis Hoogsteen/Hoogsteen (cHH)</option>
-                <option value='tHH'>trans Hoogsteen/Hoogsteen (tHH)</option>
-                <option value='cHS'>cis Hoogsteen/Sugar (cHS)</option>
-                <option value='tHS'>trans Hoogsteen/Sugar (tHS)</option>
-                <option value='cSS'>cis Sugar/Sugar (cSS)</option>
-                <option value='tSS'>trans Sugar/Sugar (tSS)</option>
+                <option value='cWW' selected>#1 cis Watson-Crick/Watson-Crick (cWW)</option>
+                <option value='tWW'>#2 trans Watson-Crick/Watson-Crick (tWW)</option>
+                <option value='cWH'>#3 cis Watson-Crick/Hoogsteen (cWH)</option>
+                <option value='tWH'>#4 trans Watson-Crick/Hoogsteen (tWH)</option>
+                <option value='cWS'>#5 cis Watson-Crick/Sugar (cWS)</option>
+                <option value='tWS'>#6 trans Watson-Crick/Sugar (tWS)</option>
+                <option value='cHH'>#7 cis Hoogsteen/Hoogsteen (cHH)</option>
+                <option value='tHH'>#2 trans Hoogsteen/Hoogsteen (tHH)</option>
+                <option value='cHS'>#9 cis Hoogsteen/Sugar (cHS)</option>
+                <option value='tHS'>#10 trans Hoogsteen/Sugar (tHS)</option>
+                <option value='cSS'>#11 cis Sugar/Sugar (cSS)</option>
+                <option value='tSS'>#12 trans Sugar/Sugar (tSS)</option>
               </select>
             </div>
           </div>
