Add some short help text
Short help text for the columns in the table.

--- a/index.html
+++ b/index.html
@@ -166,6 +166,32 @@
     </p>
   </div>
 
+  <div class="header-content" hidden data-header-name='model'>
+    <p>
+      This indicates the model number in the given PDB file the exemplar comes from.
+    </p>
+  </div>
+
+  <div class="header-content" hidden data-header-name='chains'>
+    <p>
+      This indicates the chain ids in the given PDB file the exemplar comes
+      from.
+    </p>
+  </div>
+
+  <div class="header-content" hidden data-header-name='numbers'>
+    <p>
+      This indicates the nucleotide numbers in the given PDB file the exemplar comes
+      from.
+    </p>
+  </div>
+
+  <div class="header-content" hidden data-header-name='symmetry'>
+    <p>
+      The symmetry operators for the exemplar nucleotides.
+    </p>
+  </div>
+
 </div>
 
 <script src='static/js/handlebars.js'></script>
